monticore-generator/src/test/resources/cocos/invalid/A4006/A4006.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4006;

grammar A4006 {
  A;

}
